SOme changes in Permissions and Category and Product services